WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177889
Have TextDecorationPainter hold an OptionSet of decorations
https://bugs.webkit.org/show_bug.cgi?id=177889
Summary
Have TextDecorationPainter hold an OptionSet of decorations
Daniel Bates
Reported
2017-10-04 12:09:25 PDT
Have TextDecorationPainter hold an OptionSet of decorations. Currently it abuses data type TextDecoration to store a bitmask.
Attachments
Patch
(13.04 KB, patch)
2017-10-04 12:50 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(13.15 KB, patch)
2017-10-04 12:52 PDT
,
Daniel Bates
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2017-10-04 12:50:55 PDT
Created
attachment 322705
[details]
Patch
Daniel Bates
Comment 2
2017-10-04 12:52:20 PDT
Created
attachment 322706
[details]
Patch
Build Bot
Comment 3
2017-10-04 12:53:42 PDT
Attachment 322706
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/TextDecorationPainter.cpp:246: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 4
2017-10-04 13:05:51 PDT
Comment on
attachment 322706
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=322706&action=review
> Source/WebCore/rendering/TextDecorationPainter.h:71 > - bool m_isPrinting { false }; > + bool m_isPrinting;
Will group this bool with the other bool in this class before landing.
Daniel Bates
Comment 5
2017-10-04 16:58:11 PDT
Committed
r222889
: <
http://trac.webkit.org/changeset/222889
>
Radar WebKit Bug Importer
Comment 6
2017-10-04 16:59:25 PDT
<
rdar://problem/34824462
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug